[gd_scene load_steps=6 format=3 uid="uid://sprx7rrlx4ht"]

[ext_resource type="Script" path="res://Scripts/Weapon.gd" id="1_mv75k"]
[ext_resource type="Shader" path="res://Assets/Shaders/OutlineShader.gdshader" id="2_bi4oe"]
[ext_resource type="PackedScene" uid="uid://c3oguatthq8l8" path="res://Interaction/interaction_area.tscn" id="2_fdnfw"]
[ext_resource type="AudioStream" uid="uid://d10dvb4xbj2ir" path="res://Assets/Sound/gun_shoot_01.mp3" id="3_pl6e1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w1pkj"]
resource_local_to_scene = true
shader = ExtResource("2_bi4oe")
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/on = false

[node name="Weapon" type="Node2D"]
scale = Vector2(0.8, 0.8)
script = ExtResource("1_mv75k")

[node name="Base" type="Node2D" parent="."]

[node name="WeaponSprite" type="Sprite2D" parent="Base"]
material = SubResource("ShaderMaterial_w1pkj")

[node name="BarrelOrigin" type="Marker2D" parent="Base"]
position = Vector2(15, -5)

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_pl6e1")
volume_db = 5.0

[node name="InteractionArea" parent="." node_paths=PackedStringArray("sprite_for_shader") instance=ExtResource("2_fdnfw")]
action_name = "Подобрать"
sprite_for_shader = NodePath("../Base/WeaponSprite")

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
